# tact-ai

./: .coverage  .env.example  .pre-commit-config.yaml  README.md  TASKS.md  benchmark_test.json  codecov.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_migrations.py
.github/workflows/: ci.yml
backend/: alembic.ini  config.py  main.py
backend/ai/: __init__.py  classifier.py
benchmark/: scheduler_benchmark.py
docker/: Dockerfile.backend  Dockerfile.backend.prod  Dockerfile.frontend  init.sql  nginx.conf  prometheus.yml
docs/: architecture.md  database.md  deployment.md  load-testing-optimization.md
frontend/: package.json
load-testing/: README.md  config.js  load-test.js  smoke-test.js  soak-test.js  stress-test.js  utils.js
load-tests/: README.md  analyze-results.py  load-test.js  results-template.md  setup-test-data.py
logs/: iteration-1.md  iteration-10.md  iteration-100.md  iteration-101.md  iteration-102.md  iteration-103.md  iteration-104.md  iteration-105.md  iteration-106.md  iteration-107.md  iteration-108.md  iteration-109.md  iteration-11.md  iteration-110.md  iteration-111.md  iteration-112.md  iteration-113.md  iteration-114.md  iteration-115.md  iteration-116.md  iteration-117.md  iteration-118.md  iteration-119.md  iteration-12.md  iteration-120.md  iteration-121.md  iteration-122.md  iteration-123.md  iteration-124.md  iteration-125.md  iteration-126.md  iteration-127.md  iteration-128.md  iteration-129.md  iteration-13.md  iteration-130.md  iteration-131.md  iteration-132.md  iteration-133.md  iteration-134.md  (+251 more)
shared/: schemas.py
(+59 files in other folders)
